// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconChevron matches snapshot for custom color 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../lib/assets/images/chevron.png",
      }
    }
    style={
      Object {
        "tintColor": "red",
      }
    }
  />
</View>
`;

exports[`IconChevron matches snapshot for default color 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../lib/assets/images/chevron.png",
      }
    }
    style={
      Object {
        "tintColor": "#d4d4d4",
      }
    }
  />
</View>
`;
